<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- UI-->
    <string name="app_name">SimpleBili</string>
    <string name="backslash">/</string>
    <string name="danmaku_hint">来发弹幕吧</string>
    <string name="video_list">选集</string>
    <string name="speed">播放速度</string>
    <string name="speed_0_5">0.5</string>
    <string name="speed_0_75">0.75</string>
    <string name="speed_1">1</string>
    <string name="speed_1_25">1.25</string>
    <string name="speed_1_5">1.5</string>
    <string name="speed_2">2</string>
    <string name="play_size">画面尺寸</string>
    <string name="play_size_default">默认</string>
    <string name="play_size_fullscreen">全屏</string>
    <string name="play_size_16_9">16:9</string>
    <string name="play_size_4_3">4:3</string>
    <string name="play_way">播放方式</string>
    <string name="play_way_auto">自动连播</string>
    <string name="play_way_list_recycle">列表循环</string>
    <string name="play_way_item_recycle">单集循环</string>
    <string name="play_way_pause">播完暂停</string>
    <string name="open_file">打开文件</string>
    <string name="username_hint">你的手机号/邮箱</string>
    <string name="password_hint">请输入密码</string>
    <string name="index">首页</string>
    <string name="history">历史记录</string>
    <string name="off_line_cache">离线缓存</string>
    <string name="favorites">我的收藏</string>
    <string name="my_follow">我的关注</string>
    <string name="follow">关注</string>
    <string name="watch_later">稍后再看</string>
    <string name="upper_center">创作中心</string>
    <string name="my_vip">我的大会员</string>
    <string name="live_center">直播中心</string>
    <string name="contact_service">联系客服</string>
    <string name="login">登录</string>
    <string name="login_tips">点击头像登陆</string>
    <string name="register">注册账号</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="night">夜间</string>
    <string name="category">分区</string>
    <string name="dynamic">动态</string>
    <string name="message">消息</string>
    <string name="search">搜索</string>
    <string name="download">下载</string>
    <string name="post">发布</string>
    <string name="rank">排行榜</string>
    <string name="contacts">通讯录</string>
    <string name="letter_saver">私信存档</string>
    <string name="join_group_guide">查看攻略</string>
    <string name="create_my_group">创建应援团</string>
    <string name="stop_my_group">停用应援团</string>
    <string name="message_setting">消息设置</string>
    <string name="live">直播</string>
    <string name="recommend">推荐</string>
    <string name="following">追番</string>
    <string name="film">影视</string>
    <string name="popular">热门</string>
    <string name="film_area">电影区</string>
    <string name="film_more">更多电影</string>
    <string name="record_area">纪录片区</string>
    <string name="record_more">更多纪录片</string>
    <string name="tv_area">电视剧区</string>
    <string name="tv_more">更多电视剧</string>
    <string name="special_column">专栏</string>
    <string name="bangumi">番剧</string>
    <string name="bangumi_area">番剧区</string>
    <string name="bangumi_more">更多番剧</string>
    <string name="animation">动画</string>
    <string name="animation_area">动画区</string>
    <string name="animation_more">更多动画</string>
    <string name="hope">国创</string>
    <string name="hope_area">国创区</string>
    <string name="hope_more">更多国创</string>
    <string name="music">音乐</string>
    <string name="music_area">音乐区</string>
    <string name="music_more">更多音乐</string>
    <string name="dance">舞蹈</string>
    <string name="dance_area">舞蹈区</string>
    <string name="dance_more">更多舞蹈</string>
    <string name="game">游戏</string>
    <string name="game_area">游戏区</string>
    <string name="game_more">更多游戏</string>
    <string name="science">科技</string>
    <string name="science_area">科技区</string>
    <string name="science_more">更多科技</string>
    <string name="life">生活</string>
    <string name="life_area">生活区</string>
    <string name="life_more">更多生活</string>
    <string name="art">鬼畜</string>
    <string name="art_area">鬼畜区</string>
    <string name="art_more">更多鬼畜</string>
    <string name="fashion">时尚</string>
    <string name="fashion_area">时尚区</string>
    <string name="fashion_more">更多时尚</string>
    <string name="amusement">娱乐</string>
    <string name="amusement_area">娱乐区</string>
    <string name="amusement_more">更多娱乐</string>
    <string name="clip_video">小视频</string>
    <string name="audio">音频</string>
    <string name="album">相簿</string>
    <string name="game_center">游戏中心</string>
    <string name="see_more">查看更多</string>
    <string name="schedule">时间表</string>
    <string name="indexes">索引</string>
    <string name="loading">加载中</string>
    <string name="dislike">差评</string>
    <string name="hot_divider_tips">以上为热评</string>
    <string name="send">发送</string>
    <string name="video">视频</string>
    <string name="reply">评论</string>
    <string name="introduction">简介</string>
    <string name="interaction">互动</string>
    <string name="anchor">主播</string>
    <string name="more_live">更多直播</string>
    <string name="my_create">我的创建</string>
    <string name="downloading">正在缓存</string>
    <string name="downloaded">已缓存</string>
    <string name="dynamic_bangumi_update"><xliff:g id="bili">%1$s·更新了</xliff:g></string>
    <string name="dynamic_video_update"><xliff:g id="bili">%1$s·投稿了视频</xliff:g></string>
    <string name="pause">暂停</string>
    <string name="notification_reply_me">回复我的</string>
    <string name="notification_at_me">\@我</string>
    <string name="notification_praise_me">收到的赞</string>
    <string name="notification_sys">系统通知</string>
    <string name="can_not_arrive">电波无法到达哟</string>


    <!-- 说明-->
    <string name="play_desc">播放或暂停按钮</string>
    <string name="fullscreen_desc">全屏</string>
    <string name="lock_desc">锁定屏幕或解锁</string>
    <string name="cover_desc">封面</string>
    <string name="volume_desc">音量</string>
    <string name="bright_desc">亮度</string>
    <string name="danmaku_status_desc">打开或关闭弹幕</string>
    <string name="back_desc">返回</string>
    <string name="coin_desc">投币</string>
    <string name="share_desc">分享</string>
    <string name="more_desc">更多</string>
    <string name="logo_desc">logo</string>
    <string name="open_drawer_desc">打开侧边栏</string>
    <string name="close_drawer_desc">关闭侧边栏</string>
    <string name="desc_22">22</string>
    <string name="desc_33">33</string>
    <string name="profile_desc">头像</string>
    <string name="login_desc">登录</string>
    <string name="register_desc">注册</string>
    <string name="qrcode_desc">二维码</string>
    <string name="message_login_tips">未登录无法查看消息哦\n点击登录，与小伙伴愉快交流吧</string>
    <string name="evaluate_suffix">分</string>
    <string name="evaluate">点评</string>
    <string name="more_recommend">更多推荐</string>
    <string name="check_update">检查更新</string>
    <string name="net_check">网络诊断</string>
    <string name="clear_cache">清理存储空间</string>
    <string name="download_auto">自动开始未完成下载</string>
    <string name="openSource_gratitude">开源鸣谢</string>
    <string name="reset_preference">恢复初始设置</string>
    <string name="current_version" translatable="false">1.0.0 (beta)</string>
    <string name="ip_show"><xliff:g id="bili">本机IP:%1$s,%2$s %3$s %4$s</xliff:g></string>
    <string name="ip_error">获取本机IP失败</string>
    <string name="reset_completed">已恢复初始设置</string>
    <string name="clear_completed">清理完成</string>
    <string name="latest_version">您当前已经是最新版本了^_^</string>
    <string name="cancel">取消</string>
    <string name="my_king">吾王赛高!!!</string>
    <string name="number_0">0</string>
    <string name="favorite_list_desc"><xliff:g id="bili">%1$d个内容·%2$s</xliff:g></string>
    <string name="favorite_cinema_desc"><xliff:g id="bili">%1$s|%2$s</xliff:g></string>
    <string name="favorite_topic_time"><xliff:g id="bili">收藏于%1$s</xliff:g></string>
    <string name="detail_page">详情页</string>
    <string name="version_update">版本更新</string>
    <string name="update">更新</string>

    <!-- 提示或日志-->
    <string name="uri_null_tip">Uri为空</string>
    <string name="choose__tip">选择文件</string>

    <!-- Preference Key -->
    <string name="preference_key_check_update" translatable="false">settings_preference_key_check_update</string>
    <string name="preference_key_net_check" translatable="false">settings_preference_key_net_check</string>
    <string name="preference_key_clear_cache" translatable="false">settings_preference_key_clear_cache</string>
    <string name="preference_key_download_auto" translatable="false">settings_preference_key_download_auto</string>
    <string name="preference_key_openSource_gratitude" translatable="false">settings_preference_key_openSource_gratitude</string>
    <string name="preference_key_reset_preference" translatable="false">settings_preference_key_reset_preference</string>

</resources>
