<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">
    <group android:id="@+id/item_default_group">
    <item
        android:id="@+id/item_index"
        android:title="@string/index"
        android:icon="@drawable/vector_navigation_home"
        android:checked="true"
        android:checkable="true"/>
    <item
        android:id="@+id/item_history"
        android:title="@string/history"
        android:icon="@drawable/vector_navigation_history"
        android:checkable="true"/>
    <item
        android:id="@+id/item_cache"
        android:title="@string/off_line_cache"
        android:icon="@drawable/vector_navigation_cache"
        android:checkable="true"/>
    <item
        android:id="@+id/item_favorite"
        android:title="@string/favorites"
        android:icon="@drawable/vector_navigation_favorite"
        android:checkable="true"/>
        <item
            android:id="@+id/item_follow"
            android:title="@string/my_follow"
            android:icon="@drawable/vector_navigation_follow"
            android:checkable="true"/>
    <item
        android:id="@+id/item_later"
        android:title="@string/watch_later"
        android:icon="@drawable/vector_navigation_watchlater"
        android:checkable="true"/>
        <item
            android:id="@+id/item_uppercenter"
            android:title="@string/upper_center"
            android:icon="@drawable/vector_navigation_uppercenter"
            android:checkable="true"/>
    </group>
    <group android:id="@+id/item_second_group">
        <item
            android:id="@+id/item_live"
            android:title="@string/live"
            android:icon="@drawable/vector_navigation_live"
            android:checkable="true"/>
        <item
            android:id="@+id/item_myvip"
            android:title="@string/my_vip"
            android:icon="@drawable/vector_navigation_vip"
            android:checkable="true"/>
        <item
        android:id="@+id/item_customerservice"
        android:title="@string/contact_service"
        android:icon="@drawable/vector_navigation_customer_service"
        android:checkable="true"/>
        <item
            android:id="@+id/sham_footer"
            android:title=""
            android:checkable="false"/>
    </group>
</menu>