<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_black">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="16dp"
        android:textColor="@color/white_transparent"
        android:text="@string/speed"/>
    <RadioGroup
        android:id="@+id/play_speed_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:button="@null">
        <RadioButton
            android:id="@+id/speed_0_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_0_5"
            android:padding="8dp"
            android:textColor="@color/radio_color"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/speed_0_75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_0_75"
            android:padding="8dp"
            android:textColor="@color/radio_color"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/speed_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_1"
            android:padding="8dp"
            android:textColor="@color/radio_color"
            android:checked="true"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/speed_1_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_1_25"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/speed_1_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_1_5"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/speed_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_2"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_size"
        android:textColor="@color/white_transparent"/>
    <RadioGroup
        android:id="@+id/size_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/size_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_size_default"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:checked="true"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/size_fullscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_size_fullscreen"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/size_16_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_size_16_9"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/size_4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_size_4_3"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_way"
        android:textColor="@color/white_transparent"/>
    <RadioGroup
        android:id="@+id/play_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/playway_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_way_auto"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:checked="true"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/playway_list_recycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_way_list_recycle"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/playway_item_recycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_way_item_recycle"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/playway_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_way_pause"
            android:textColor="@color/radio_color"
            android:padding="8dp"
            android:button="@null"/>
    </RadioGroup>
</LinearLayout>