<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:columnCount="4"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/index_category_live"
        android:text="@string/live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:drawableTop="@mipmap/ic_category_live"/>
    <TextView
        android:id="@+id/index_category_bangumi"
        android:text="@string/bangumi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:drawableTop="@mipmap/ic_category_bangumi"/>
    <com.github.welcomeworld.simplebili.widget.ImageTextView
        android:id="@+id/index_category_animation"
        android:text="@string/animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        app:drawableTopWidth="30dp"
        app:drawableTopHeight="30dp"
        android:drawableTop="@mipmap/ic_category_animation"/>
    <TextView
        android:id="@+id/index_category_hope"
        android:text="@string/hope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_hope"/>
    <TextView
        android:id="@+id/index_category_music"
        android:text="@string/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_music"/>
    <TextView
        android:id="@+id/index_category_dance"
        android:text="@string/dance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_dance"/>
    <TextView
        android:id="@+id/index_category_game"
        android:text="@string/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_game"/>
    <TextView
        android:id="@+id/index_category_science"
        android:text="@string/science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_science"/>
    <TextView
        android:id="@+id/index_category_life"
        android:text="@string/life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_life"/>
    <TextView
        android:id="@+id/index_category_art"
        android:text="@string/art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_art"/>
    <TextView
        android:id="@+id/index_category_fashion"
        android:text="@string/fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_fashion"/>
    <TextView
        android:id="@+id/index_category_amusement"
        android:text="@string/amusement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_amusement"/>
    <TextView
        android:id="@+id/index_category_film"
        android:text="@string/film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_film"/>
    <TextView
        android:id="@+id/index_category_clipvideo"
        android:text="@string/clip_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_clip_video"/>
    <TextView
        android:id="@+id/index_category_specialcolumn"
        android:text="@string/special_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_specialcolumn"/>
    <TextView
        android:id="@+id/index_category_audio"
        android:text="@string/audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_audio"/>
    <TextView
        android:id="@+id/index_category_album"
        android:text="@string/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_album"/>
    <TextView
        android:id="@+id/index_category_gamecenter"
        android:text="@string/game_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:drawableTop="@mipmap/ic_category_game_center"/>
</android.support.v7.widget.GridLayout>