<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/gray_light">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/login_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/base_toolbar"
        app:navigationIcon="@mipmap/player_back"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/login">
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_height="106dp"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:id="@+id/tips_layout">
    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/bili_logo"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_logo"
        android:contentDescription="@string/logo_desc"/>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ic_22"
        android:src="@mipmap/ic_22"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/bili_logo"
        android:contentDescription="@string/desc_22"
        android:scaleType="fitStart"/>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ic_33"
        android:src="@mipmap/ic_33"
        android:layout_alignParentBottom="true"
        android:scaleType="fitEnd"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/desc_33"
        android:layout_toEndOf="@id/bili_logo"/>
</RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_username_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username_hint"
            android:drawablePadding="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawableStart="@mipmap/ic_login_username" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:drawableStart="@mipmap/ic_login_password"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/login_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/register"
            android:background="@drawable/button_pink_stroke"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:contentDescription="@string/login_desc" />
        <Button
            android:id="@+id/login_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            android:background="@drawable/button_solid_pink"
            android:enabled="false"
            android:text="@string/login"
            android:contentDescription="@string/register_desc"/>
    </LinearLayout>
</LinearLayout>