<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:background="@color/colorPrimary">
    <ImageView
        android:background="@color/transparent"
        android:tint="@color/transparent_a30"
        android:id="@+id/main_header_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/drawerbg_not_logined"
        android:contentDescription="@string/play_desc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_header_profile"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:text="@string/login_tips"/>
    <ImageView
        android:id="@+id/main_header_profile"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:src="@mipmap/ic_default_avatar"
        android:contentDescription="@string/profile_desc"/>
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/selector_ring_32"
        android:src="@drawable/vector_navigation_qrcode"
        android:contentDescription="@string/qrcode_desc"/>
</RelativeLayout>